--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body{
 
 .textArea{
     width: 100%;
+    height: 60vh;
     resize: none;
     padding: 1rem;
     color: #172B49;
@@ -50,7 +51,7 @@ body{
     background-color: #25517B;
     cursor: pointer;
     border-radius: 10px;
-    margin-top: 5px;
+    margin-top: 1rem;
 }
 
 .btn:hover{
