--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ body{
 
 .textArea{
     width: 100%;
-    height: 60vh;
     resize: none;
     padding: 1rem;
     color: #172B49;
@@ -51,7 +50,7 @@ body{
     background-color: #25517B;
     cursor: pointer;
     border-radius: 10px;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
 }
 
 .btn:hover{
@@ -69,6 +68,7 @@ body{
     width:  auto;
     height: 10rem;
     border-radius: 20px;
+    margin-bottom: 1rem;
 }
 
 .celebrationContainer{
@@ -77,4 +77,29 @@ body{
     align-items: center;
     justify-content: center;
     margin-top: 1rem;
+    animation: slide-up 2s forwards;
+}
+
+.headerContainer{
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+    animation: slide-in 2s forwards ;
+}
+
+@keyframes slide-in {
+    0%{
+        transform: translateX(-100vw);
+    }
+}
+
+.image{
+    max-height: 8rem;
+    margin-right: 2rem;
+}
+
+@keyframes slide-up {
+    0%{
+        transform: translatey(100vh);
+    }
 }
