--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ body{
     padding: 0.5rem 1rem 0.5rem 1rem ;
     background-color: #25517B;
     cursor: pointer;
-    border-radius: 10px;
     margin-top: 0.5rem;
 }
 
@@ -85,6 +84,12 @@ body{
     align-items: center;
     margin-bottom: 1rem;
     animation: slide-in 2s forwards ;
+}
+
+.thankYou{
+    width: 78%;
+    font-size: 1.2rem;
+    text-align: center;
 }
 
 @keyframes slide-in {
