--- a/style.css
+++ b/style.css
@@ -111,3 +111,12 @@ body{
         opacity: 1;
     }
 }
+
+
+@media (max-width: 420px) {
+
+    .image{
+        display: none!important;
+    }
+  
+}
